# userrepair

./: .env.example  .gitignore  README.md  build.bat  bump-version.ps1  index.html  package-lock.json  package.json  push.bat  schema.sql  tailwind.config.js  tsconfig.json  vite.config.ts
plugins/example-plugin/: plugin.json
scripts/: make-icon.mjs  seed-reference.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server.rs
src-tauri/src/commands/: attachments.rs  auth.rs  backup.rs  camera.rs  database.rs  email.rs  mod.rs  net.rs  pingram.rs  square.rs  system.rs  update.rs
src-tauri/src/db/: 0002_reference.sql  0006_device_inventory.sql  0010_part_backfill.sql  0011_pos.sql  0012_accounts.sql  0013_split_payments.sql  0014_rewards.sql  0015_ticket_locks.sql  0016_notification_outbox.sql  0017_outbox_is_html.sql  0018_inbox.sql  0019_outbox_pingram.sql  0020_inbox_direction.sql  migrations.rs  mod.rs  schema.sql  seed_boards.sql  seed_consoles.sql  seed_kb_devices.sql  seed_microcontrollers.sql  seed_raspberry_pi.sql  seed_reference.sql
src/components/camera/: CameraControls.tsx  CameraStage.tsx
src/components/customers/: CustomerFormDialog.tsx
src/components/layout/: AppLayout.tsx  CommandPalette.tsx  ErrorBoundary.tsx  Sidebar.tsx  SyncStatus.tsx  Topbar.tsx  UpdateButton.tsx  UpdateDialog.tsx
src/components/pos/: SaleDetailDialog.tsx
src/components/receipt/: ReceiptPreviewDialog.tsx
src/components/shared/: AddressAutocomplete.tsx  Barcode.tsx  ConfirmDialog.tsx  DataTable.tsx  EmptyState.tsx  PageHeader.tsx  RichTextEditor.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  combobox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  select.tsx  sonner.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/hooks/: useAsync.ts  useBarcodeScanner.ts  useCardSwipe.ts  useOutboxFlusher.ts  useSyncMonitor.ts  useTicketLock.ts
src/lib/: attachmentUrl.ts  boardviewMatch.ts  camera.ts  db.ts  email.ts  format.ts  image.ts  magstripe.ts  markdown.tsx  nav.ts  net.ts  receipt.ts  roles.ts  square.ts  station.ts  status.ts  sync.ts  update.ts  utils.ts  validators.ts
src/lib/repos/: activity.ts  attachments.ts  auth.ts  backup.ts  boards.ts  customers.ts  dashboard.ts  devices.ts  donors.ts  financial.ts  inbox.ts  intelligence.ts  inventory.ts  knowledge.ts  locks.ts  measurements.ts  outbox.ts  plugins.ts  pos.ts  reference.ts  rewards.ts  search.ts  settings.ts  technicians.ts  tickets.ts
src/routes/: BackupPage.tsx  BoardToolsPage.tsx  CalculatorPage.tsx  CameraPopout.tsx  CustomerDetailPage.tsx  CustomersPage.tsx  DashboardPage.tsx  DevicesPage.tsx  DonorsPage.tsx  FinancialPage.tsx  InboxPage.tsx  IntelligencePage.tsx  InventoryPage.tsx  KnowledgePage.tsx  LoginPage.tsx  MicrosolderingPage.tsx  NetworkSetupScreen.tsx  POSPage.tsx  PluginsPage.tsx  ReferencePage.tsx  ReportingPage.tsx  SalesHistoryPage.tsx  SettingsPage.tsx  SetupScreen.tsx  TicketDetailPage.tsx  TicketsPage.tsx
src/stores/: auth.ts  brand.ts  theme.ts  ui.ts  update.ts
src/types/: index.ts
